--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		  </head>
 		  <body>
 			<div align="center">
-				<h1>YOUR NAME HERE</h1>
+				<h1>Jaireyon Sumlin</h1>
 				<h2>Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
-					<h4>My hometown is HOMETOWN.</h4>
-					<h4>My favorite color is COLOR.</h4>
-					<h4>My favorite food is FOOD.</h4>
-					<h4>If I could be any animal, I would be A/AN ANIMAL.</h4>
+					<h4>My hometown is shreveport.</h4>
+					<h4>My favorite color is yellow.</h4>
+					<h4>My favorite food is chicken and pizza.</h4>
+					<h4>If I could be any animal, I would be cheetah.</h4>
 			</div>
 		  </body>
 		</html>
